        directory `/etc/package-includes/` and delete directories
        `zope/app/layers/`and `zope/app/skins/`.

      - Removed internal concept of 'warnings' from TAL interpreter as it
        wasn't used at all and does not belong to any public interface.

      - Removed some cruft from pre-3.0 page templates (The concept of `usage`
        was removed back then already.)

    Bug fixes

      - Fixed issue 535: make HTTPInputStream work with Python 2.4.4.

      - As part of zope.decorator refactoring, its dependancy were not removed
        from DEPENDENCIES.cfg in zope.location.  Also zope.security.decorator
        doctests were not running due to missing boilerplate code.

      - When a credential plugin redirects to the login page, it memorizes
        the requested URL in the 'camefrom' GET parameter.
        The 'camefrom' parameter was not accurate.

      - Fixed a bug in getImageInfo which could cause an
        UnboundLocalError under certain conditions.

      - Deprecated ``zope.app.component.get/queryNextSiteManager``
        function. Fixed ``zope.app.component.get/queryNextUtility`` to work
        correctly with multiple bases.

      - Generate an ObjectCreatedEvent when the root object is created.

      - More or less fixed the static apidoc generator. (fix + workaround).

      - Fixed issue 705, double URL unquoting of GET parameters in
        functional tests.

      - Fixed issue 676, utilities defined in Zope 3.2 weren't
        converted properly.

      - Fixed issue 675, Pluggable Authentication utilities with group
        folders weren't updated correctly to replect the new database
        format.

      - Fixed issue 663, adding basic auth and session-credential
        plugins didn't work.

      - Fixed issue 650, a test failure on Mac OS X that seemed to
        indicate deeper problems in ZEO's thread handling.  Refactored
        ZEO so that ZEO clients have their own asyncore loop and don't