@@ -1,4 +1,4 @@
-PYTHON=python2.4
+PYTHON=python2.4.3
 TESTFLAGS=-v
 TESTOPTS=
 SETUPFLAGS=
