@@ -133,6 +133,10 @@ Zope Changes
 
     Bug fixes
 
+      - Fixed encoding of newlines, carriage returns, and tabs when
+        encoding attributes for widgets so we're consistent under all
+        Python 2.4.x versions (including 2.4.4, which failed tests before).
+
       - Fixed issue 535: make HTTPInputStream work with Python 2.4.4.
 
       - As part of zope.decorator refactoring, its dependancy were not removed
